styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    scroll-behavior: smooth;
    font-family: "poppins" , sans-serif;
}

:root {
    --bg-color:#0f172a;
    --second-bg-color:#131313;
    --text-color:white;
    --main-color:#00ffee;
    --second-main-color:#080808;
}

html, body {
    overflow-x: hidden;
    width: 100%;
}
body {
    background: var(--bg-color);
    color: var(--text-color);
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 3rem 12% 3rem;
    background: rgba(0, 0, 0, 0.3);
    backdrop-filter:blur(10px);
    display: flex;
    justify-content: space-between;
    align-items:center;
    z-index: 5;
}

.logo {
    font-size: 3rem;
    color: var(--text-color); 
    font-weight: 800;
   cursor: pointer;
   transition: 0.3s ease;
   
}

.logo:hover{

    transform: scale(1.1);      
}
.logo span{
    text-shadow: 0 0 25px var(--main-color);
}
.navbar a{
    font-size: 1.8rem;
    color: var(--text-color);
    margin-left: 3rem;
    font-weight: 500;
    transition: 0.3s ease;
      border-bottom: 3px solid transparent;
}
.navbar a:hover,
.navbar a.active{
    color: var(--main-color);
    border-bottom: 3px solid var(--main-color);
}
#menu-icon{
    font-size: 3.6rem;
    color: var(--main-color);
    display: none;
    cursor: pointer;
}


section{
    min-height: 100vh;
    padding: 10rem 12% 10rem;
}
.home{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10rem;
}
.home-content{
    display: flex;
    flex-direction: column;
    align-items: baseline;
    text-align: left;
    justify-content: center;
    margin-top: 4rem;
}
span{
    color: var(--main-color);
}
.logo span{
    color: var(--main-color);
}

.home-content h3{
    margin-bottom: 2rem;
    margin-top: 0.1rem;
    font-size: 3.5rem;
}
.home-content h1{
    font-size: 5rem;
    font-weight: 700;
    margin-top: 1rem;
    line-height: 1;
}
.home-img{
    border-radius: 50%;
}
.home-img img{
    position: relative;
    top: 5rem;
    width: 28vw;
    max-width: 500px;
    border-radius: 50%;
    box-shadow: 0 0 25px var(--main-color);
    cursor: pointer;
    transition: 0.4s ease-in-out;
}
.home-img img:hover{
    box-shadow: 0 0 25px var(--main-color),
                0 0 50px var(--main-color),
                0 0 100px var(--main-color);
}

.home-content p{
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.8;
    max-width: 700px;
    margin-top: 20px auto;
}

.social-icons a{
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4.5rem;
    height: 4.5rem;
    background: transparent;
    border: 2px solid var(--main-color);
    font-size: 2.5rem;
    border-radius: 50%;
    color: var(--main-color);
    margin: 3rem 1.5rem 3rem 0;
    transition: 0.3s ease-in-out;
}

.social-icons a:hover{
    color: var(--text-color);
    transform: scale(1.3) translateY(-5px);
    box-shadow: 0 0 25px var(--main-color);
    background-color: var(--main-color);
}

.btn-group{
    display: flex;
    align-items: center;
    gap: 1.5rem;
}


.btn{
    display: inline-block;
    padding: 1rem 2.8rem;
    background: var(--main-color);
    box-shadow: 0 0 25px var(--main-color);
    border-radius: 4rem;
    font-size: 1.6rem;
    color: black;
    border: 2px solid transparent;
    letter-spacing: 0.1rem;
    font-weight: 600;
    transition: 0.3s ease-in-out;
    cursor: pointer;
}

.btn:hover{
    transform: scale(1.05);
    box-shadow: 0 0 50px var(--main-color);
}


.btn-group a:nth-of-type(2){
    background-color: black;
    color: var(--main-color);
    border: 2px solid var(--main-color);
    box-shadow: 0 0 25px transparent;
}

.btn-group a:nth-of-type(2):hover{
    box-shadow: 0 0 25px var(--main-color);
    background-color: var(--main-color);
    color: black;
}

.text-animation{
    font-size: 3.2rem;
    font-weight: 600;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: .5rem;   
}

.text-animation span{
    position: relative;
    display: inline-block;
     min-width: 180px;
      text-align: left;
}

.text-animation span::before{
    content: "Web Developer";
    color: var(--main-color);
    animation: words 20s infinite;
}

.text-animation span::after{
    content: "";
    background-color: var(--bg-color);
    position: absolute;
    width: calc(100% + 8px);
    height: 110%;
    border-left: 3px solid var(--bg-color);
    right: -8px;
    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
}

@keyframes cursor{
    to{
        border-left: 2px solid var(--main-color);
    }
}

@keyframes words{
    0%,
    20%{
        content: "Frontend Designer";
    }
    21%,
    40%{
        content: "Web Designer";
    }
    41%,
    60%{
        content: "UI / UX Designer";
    }
    61%,
    80%{
        content: "Web Developer";
    }
    81%,
    100%{

       content:"Software Tester";   
    }
}

@keyframes typing{
    10%,
    15%,
    30%,
    35%,
    50%,
    55%,
    70%,
    75%,
    90%,
    95%{
        width: 0;
    }

    5%,
    20%,
    25%,
    40%,
    45%,
    60%,
    65%,
    80%,
    85%{
        width: calc(100% + 8px);
    }
}

.heading{
    font-size: 8rem;
    text-align: center;
    margin: 1rem 0 5rem;
}

.education{
    padding: 100px 15px;
    background: var(--second-bg-color);
}

.education h2{
    margin-bottom: 5rem;
}

.timeline-items{
    max-width: 1200px;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    position: relative;
}

.timeline-items::before{
    content: "";
    position: absolute;
    width: 5px;
    height: 100%;
    background-color: var(--main-color);
    left: calc(50% - 1px);
}

.timeline-item{
    margin-bottom: 40px;
    width: 100%;
    position: relative;
}

.timeline-item:last-child{
    margin-bottom: 0;
}
/* ... */

